tests/snapshots/parser__parse_blinking.snap
---
source: tests/parser.rs
expression: file
---
typedefs: []
functions:
  - id: xor
    inputs:
      - - t
        - Boolean
      - - b
        - Boolean
    statements: []
    returned:
      - Boolean
      - kind:
          Application:
            function_expression:
              kind:
                Identifier:
                  id: if_then_else
              location: ~
            inputs:
              - kind:
                  Identifier:
                    id: t
                location: ~
              - kind:
                  Application:
                    function_expression:
                      kind:
                        Identifier:
                          id: "!"
                      location: ~
                    inputs:
                      - kind:
                          Identifier:
                            id: b
                        location: ~
                location: ~
              - kind:
                  Identifier:
                    id: b
                location: ~
        location: ~
    location: ~
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - tick
        - Boolean
    equations:
      - - o
        - scope: Output
          id: o
          signal_type: Integer
          expression:
            kind:
              Expression:
                expression:
                  Application:
                    function_expression:
                      kind:
                        Expression:
                          expression:
                            Identifier:
                              id: if_then_else
                      location: ~
                    inputs:
                      - kind:
                          Expression:
                            expression:
                              Identifier:
                                id: res
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Constant:
                                constant:
                                  Integer: 0
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Application:
                                function_expression:
                                  kind:
                                    Expression:
                                      expression:
                                        Identifier:
                                          id: " + "
                                  location: ~
                                inputs:
                                  - kind:
                                      Expression:
                                        expression:
                                          Application:
                                            function_expression:
                                              kind:
                                                Expression:
                                                  expression:
                                                    Identifier:
                                                      id: (_)
                                              location: ~
                                            inputs:
                                              - kind:
                                                  FollowedBy:
                                                    constant:
                                                      kind:
                                                        Expression:
                                                          expression:
                                                            Constant:
                                                              constant:
                                                                Integer: 0
                                                      location: ~
                                                    expression:
                                                      kind:
                                                        Expression:
                                                          expression:
                                                            Identifier:
                                                              id: o
                                                      location: ~
                                                location: ~
                                    location: ~
                                  - kind:
                                      Expression:
                                        expression:
                                          Identifier:
                                            id: inc
                                    location: ~
                        location: ~
            location: ~
          location: ~
      - - inc
        - scope: Local
          id: inc
          signal_type: Integer
          expression:
            kind:
              Expression:
                expression:
                  Application:
                    function_expression:
                      kind:
                        Expression:
                          expression:
                            Identifier:
                              id: if_then_else
                      location: ~
                    inputs:
                      - kind:
                          Expression:
                            expression:
                              Identifier:
                                id: tick
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Constant:
                                constant:
                                  Integer: 1
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Constant:
                                constant:
                                  Integer: 0
                        location: ~
            location: ~
          location: ~
    contract:
      requires: []
      ensures: []
      invariant: []
    location: ~
  - id: blinking
    is_component: false
    inputs:
      - - tick_number
        - Integer
    equations:
      - - status
        - scope: Output
          id: status
          signal_type: Integer
          expression:
            kind:
              Expression:
                expression:
                  Application:
                    function_expression:
                      kind:
                        Expression:
                          expression:
                            Identifier:
                              id: if_then_else
                      location: ~
                    inputs:
                      - kind:
                          Expression:
                            expression:
                              Identifier:
                                id: on_off
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Application:
                                function_expression:
                                  kind:
                                    Expression:
                                      expression:
                                        Identifier:
                                          id: " + "
                                  location: ~
                                inputs:
                                  - kind:
                                      Expression:
                                        expression:
                                          Identifier:
                                            id: counter
                                    location: ~
                                  - kind:
                                      Expression:
                                        expression:
                                          Constant:
                                            constant:
                                              Integer: 1
                                    location: ~
                        location: ~
                      - kind:
                          Expression:
                            expression:
                              Constant:
                                constant:
                                  Integer: 0
                        location: ~
            location: ~
          location: ~
      - - counter
        - scope: Local
          id: counter
          signal_type: Integer
          expression:
            kind:
              Expression:
                expression:
                  FieldAccess:
                    expression:
                      kind:
                        Expression:
                          expression:
                            Application:
                              function_expression:
                                kind:
                                  Expression:
                                    expression:
                                      Identifier:
                                        id: counter
                                location: ~
                              inputs:
                                - kind:
                                    Expression:
                                      expression:
                                        Identifier:
                                          id: res
                                  location: ~
                                - kind:
                                    Expression:
                                      expression:
                                        Constant:
                                          constant:
                                            Boolean: true
                                  location: ~
                      location: ~
                    field: o
            location: ~
          location: ~
      - - res
        - scope: Local
          id: res
          signal_type: Boolean
          expression:
            kind:
              FollowedBy:
                constant:
                  kind:
                    Expression:
                      expression:
                        Constant:
                          constant:
                            Boolean: true
                  location: ~
                expression:
                  kind:
                    Expression:
                      expression:
                        Application:
                          function_expression:
                            kind:
                              Expression:
                                expression:
                                  Identifier:
                                    id: (_)
                            location: ~
                          inputs:
                            - kind:
                                Expression:
                                  expression:
                                    Application:
                                      function_expression:
                                        kind:
                                          Expression:
                                            expression:
                                              Identifier:
                                                id: " == "
                                        location: ~
                                      inputs:
                                        - kind:
                                            Expression:
                                              expression:
                                                Application:
                                                  function_expression:
                                                    kind:
                                                      Expression:
                                                        expression:
                                                          Identifier:
                                                            id: " + "
                                                    location: ~
                                                  inputs:
                                                    - kind:
                                                        Expression:
                                                          expression:
                                                            Identifier:
                                                              id: counter
                                                      location: ~
                                                    - kind:
                                                        Expression:
                                                          expression:
                                                            Constant:
                                                              constant:
                                                                Integer: 1
                                                      location: ~
                                          location: ~
                                        - kind:
                                            Expression:
                                              expression:
                                                Identifier:
                                                  id: tick_number
                                          location: ~
                              location: ~
                  location: ~
            location: ~
          location: ~
      - - on_off
        - scope: Local
          id: on_off
          signal_type: Boolean
          expression:
            kind:
              Expression:
                expression:
                  Application:
                    function_expression:
                      kind:
                        Expression:
                          expression:
                            Identifier:
                              id: xor
                      location: ~
                    inputs:
                      - kind:
                          Expression:
                            expression:
                              Identifier:
                                id: res
                        location: ~
                      - kind:
                          FollowedBy:
                            constant:
                              kind:
                                Expression:
                                  expression:
                                    Constant:
                                      constant:
                                        Boolean: true
                              location: ~
                            expression:
                              kind:
                                Expression:
                                  expression:
                                    Identifier:
                                      id: on_off
                              location: ~
                        location: ~
            location: ~
          location: ~
    contract:
      requires: []
      ensures: []
      invariant: []
    location: ~
component: ~
interface: ~
location: ~
