tests/snapshots/parser__parse_button_management_condition_match.snap
---
source: tests/parser.rs
expression: file
---
typedefs:
  - Enumeration:
      id: Button
      elements:
        - Released
        - Pressed
      location: ~
  - Enumeration:
      id: ResetState
      elements:
        - InProgress
        - Confirmed
      location: ~
functions: []
nodes:
  - id: counter
    is_component: false
    inputs:
      - - res
        - Boolean
      - - inc
        - Integer
    equations:
      - - o
        - scope: Output
          id: o
          signal_type: Integer
          expression:
            MapApplication:
              function_expression:
                Call:
                  id: if_then_else
                  typing: ~
                  location: ~
              inputs:
                - SignalCall:
                    id: res
                    typing: ~
                    location: ~
                - Constant:
                    constant:
                      Integer: 0
                    typing: ~
                    location: ~
                - MapApplication:
                    function_expression:
                      Call:
                        id: " + "
                        typing: ~
                        location: ~
                    inputs:
                      - MapApplication:
                          function_expression:
                            Call:
                              id: (_)
                              typing: ~
                              location: ~
                          inputs:
                            - FollowedBy:
                                constant:
                                  Integer: 0
                                expression:
                                  SignalCall:
                                    id: o
                                    typing: ~
                                    location: ~
                                typing: ~
                                location: ~
                          typing: ~
                          location: ~
                      - SignalCall:
                          id: inc
                          typing: ~
                          location: ~
                    typing: ~
                    location: ~
              typing: ~
              location: ~
          location: ~
    location: ~
  - id: reset_button
    is_component: false
    inputs:
      - - button_state
        - NotDefinedYet: Button
      - - period
        - Integer
      - - reset_limit_1
        - Integer
      - - reset_limit_2
        - Integer
    equations:
      - - user_reset_request_state
        - scope: Output
          id: user_reset_request_state
          signal_type:
            NotDefinedYet: ResetState
          expression:
            Match:
              expression:
                SignalCall:
                  id: button_state
                  typing: ~
                  location: ~
              arms:
                - - Constant:
                      constant:
                        Enumeration:
                          - Button
                          - Released
                      location: ~
                  - ~
                  - Constant:
                      constant:
                        Enumeration:
                          - ResetState
                          - Confirmed
                      typing: ~
                      location: ~
                - - Constant:
                      constant:
                        Enumeration:
                          - Button
                          - Pressed
                      location: ~
                  - MapApplication:
                      function_expression:
                        Call:
                          id: " >= "
                          typing: ~
                          location: ~
                      inputs:
                        - SignalCall:
                            id: counter
                            typing: ~
                            location: ~
                        - SignalCall:
                            id: reset_limit_1
                            typing: ~
                            location: ~
                      typing: ~
                      location: ~
                  - Constant:
                      constant:
                        Enumeration:
                          - ResetState
                          - InProgress
                      typing: ~
                      location: ~
                - - Default:
                      location: ~
                  - ~
                  - Constant:
                      constant:
                        Enumeration:
                          - ResetState
                          - Confirmed
                      typing: ~
                      location: ~
              typing: ~
              location: ~
          location: ~
      - - user_reset_request
        - scope: Output
          id: user_reset_request
          signal_type: Boolean
          expression:
            Match:
              expression:
                SignalCall:
                  id: button_state
                  typing: ~
                  location: ~
              arms:
                - - Constant:
                      constant:
                        Enumeration:
                          - Button
                          - Released
                      location: ~
                  - ~
                  - FollowedBy:
                      constant:
                        Boolean: false
                      expression:
                        SignalCall:
                          id: user_reset_request
                          typing: ~
                          location: ~
                      typing: ~
                      location: ~
                - - Constant:
                      constant:
                        Enumeration:
                          - Button
                          - Pressed
                      location: ~
                  - ~
                  - MapApplication:
                      function_expression:
                        Call:
                          id: " >= "
                          typing: ~
                          location: ~
                      inputs:
                        - SignalCall:
                            id: counter
                            typing: ~
                            location: ~
                        - MapApplication:
                            function_expression:
                              Call:
                                id: " + "
                                typing: ~
                                location: ~
                            inputs:
                              - SignalCall:
                                  id: reset_limit_1
                                  typing: ~
                                  location: ~
                              - SignalCall:
                                  id: reset_limit_2
                                  typing: ~
                                  location: ~
                            typing: ~
                            location: ~
                      typing: ~
                      location: ~
              typing: ~
              location: ~
          location: ~
      - - counter
        - scope: Local
          id: counter
          signal_type: Integer
          expression:
            NodeApplication:
              node: counter
              inputs:
                - SignalCall:
                    id: res
                    typing: ~
                    location: ~
                - SignalCall:
                    id: period
                    typing: ~
                    location: ~
              signal: o
              typing: ~
              location: ~
          location: ~
      - - res
        - scope: Local
          id: res
          signal_type: Boolean
          expression:
            MapApplication:
              function_expression:
                Call:
                  id: " && "
                  typing: ~
                  location: ~
              inputs:
                - MapApplication:
                    function_expression:
                      Call:
                        id: (_)
                        typing: ~
                        location: ~
                    inputs:
                      - MapApplication:
                          function_expression:
                            Call:
                              id: " == "
                              typing: ~
                              location: ~
                          inputs:
                            - SignalCall:
                                id: button_state
                                typing: ~
                                location: ~
                            - Constant:
                                constant:
                                  Enumeration:
                                    - Button
                                    - Pressed
                                typing: ~
                                location: ~
                          typing: ~
                          location: ~
                    typing: ~
                    location: ~
                - MapApplication:
                    function_expression:
                      Call:
                        id: (_)
                        typing: ~
                        location: ~
                    inputs:
                      - FollowedBy:
                          constant:
                            Boolean: true
                          expression:
                            MapApplication:
                              function_expression:
                                Call:
                                  id: " == "
                                  typing: ~
                                  location: ~
                              inputs:
                                - SignalCall:
                                    id: button_state
                                    typing: ~
                                    location: ~
                                - Constant:
                                    constant:
                                      Enumeration:
                                        - Button
                                        - Released
                                    typing: ~
                                    location: ~
                              typing: ~
                              location: ~
                          typing: ~
                          location: ~
                    typing: ~
                    location: ~
              typing: ~
              location: ~
          location: ~
    location: ~
component: ~
location: ~

